Bug Fix: fixed bug on iphone's modal popup and updated how scroll to section behaves

--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ textarea:focus-visible {
 }
 
 .contact_form {
-    margin-bottom: 72px;
+    padding-bottom: 72px;
 }
 
 .email_sending_form button {
@@ -1032,7 +1032,7 @@ textarea:focus-visible {
     }
 
     .contact_form {
-        margin-bottom: 136px;
+        padding-bottom: 136px;
     }
 
     ::-moz-placeholder {
@@ -1190,7 +1190,7 @@ textarea:focus-visible {
     }
 
     .contact_form {
-        margin-bottom: 136px;
+        padding-bottom: 136px;
     }
 
     ::-moz-placeholder {
